# playmcp-viewer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  dev.fastmcp.json  fastmcp.json  logging.yaml  pyproject.toml
.github/: pull_request_template.md
src/playmcp_viewer/: app.py  config.py
src/playmcp_viewer/inbound/: __init__.py  dto.py  tool.py
src/playmcp_viewer/outbound/: client.py  dto.py
tests/: test_outbound_client.py
